# Concurrency-Tasks

./: README.md
task_1/: CMakeLists.txt  Determinant.cpp  Determinant.h  Matrix.cpp  Matrix.h  Test.cpp  Test.h  build.sh
task_2/: CMakeLists.txt  ConcurrentList.cpp  ConcurrentList.h  Test.cpp  Test.h  Utils.cpp  Utils.h  helgrind.sh  main.cpp  result_helgrind.txt
